@@ -273,6 +273,10 @@ if (isset ($_POST['maj'])) {
         require 'updates/173_to_174.inc.php';
 	}
 
+	if (($force_maj == 'yes') or (quelle_maj("master"))) {
+        require 'updates/174_to_dev.inc.php';
+	}
+
 	// Mise à jour du numéro de version
 	saveSetting("version", $gepiVersion);
 	saveSetting("pb_maj", $pb_maj);
