@@ -3,6 +3,9 @@
 |= CHANGELOG GEPI =|
 |==================|
 
+Gepi-master (Version de développement)
+===========================
+
 Gepi-1.7.4 (28/01/2019)
 ===========================
 
